--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,12 @@
 {
   "name": "Radio GenAp",
   "short_name": "GenAp",
-  "description": "Escucha Radio GenAp Cristiana en vivo desde tu móvil",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#1F2937",
-  "theme_color": "#FF6447",
+  "theme_color": "#FFA447",
   "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
